syntax = "proto3";

message Login {
  string username = 1;
  string password = 2;
}

message Register {
  string username = 1;
  string password = 2;
}

message Ping {
  bytes data = 1;
}

message ClientToServerMessage {
  oneof packet {
    Login login = 1;
    Register register = 2;
    Ping ping = 3;
  }
}